# HydraCamel

./: catkin things.txt
DebugFilters/: .cproject  .project  BlackBoxDebugAlgorithm.cpp  CollisionAlgo.cpp  FirstTaskGate.cpp.txt  FirstTaskGate.h.txt  GateDebugAlgorithm.cpp  Main.cpp  main.cpp  pic1.png_dilated1.config
DebugFilters/Debug/: DebugFilters  Main.d  makefile  objects.mk  sources.mk  subdir.mk
DebugFilters/Utils/: Utils.h
GUI/: .classpath  .project  firstTaskGate.config
GUI/src/: ClientGUI.java  ConfigWindow.java  Connection.java  LocalConnection.java  Menu.java  main.java  newmain.java
HydroCamel/: .cproject  .project  filters.config  log.txt  log.txt~
HydroCamel/Algos/: .cproject
HydroCamel/Debug/: makefile  sources.mk
HydroCamel/include/: CamerasController.h  FilterHandler.h  FilterRun.h  FilterRunThread.h  Log.h  RosNetwork.h
HydroCamel/src/: FilterRun.cpp  FilterRunThread.cpp  FrontCamera.cpp  RosNetwork.cpp  VideoStream.cpp  main.cpp
LocalHydroCamel/: .cproject  .project  Gate.config  firstTaskGate.config  log.txt
LocalHydroCamel/Algos/: .cproject  .~lock.╫Ю╫У╫и╫Щ╫Ъ.odt#
LocalHydroCamel/Debug/: bottomAlgos.txt  log.txt  makefile  objects.mk  sources.mk
LocalHydroCamel/include/: FilterHandler.h  FilterRun.h  VideoStream.h
LocalHydroCamel/src/: CreatedFilter.cpp  FilterHandler.cpp  FilterRun.cpp  VideoStream.cpp  main.cpp
ROS_PROJECT/: ThirdTaskBlackBox.config  log.txt
ROS_PROJECT/camera_input/: CMakeLists.txt  package.xml
ROS_PROJECT/devel/: .catkin  .rosinstall  setup.sh
ROS_PROJECT/hc_vision/: log.txt
ROS_PROJECT/src/: .cproject  .project  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ROS_PROJECT/src/camera_driver/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install.txt  package.xml
ROS_PROJECT/src/camera_driver/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ROS_PROJECT/src/camera_driver/catkin_generated/installspace/: camera_driver.pc  camera_driverConfig.cmake
ROS_PROJECT/src/camera_driver/src/: imageReceive.cpp  imageSender.cpp
ROS_PROJECT/src/hc_vision/: .cproject  .project  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frontAlgos.txt  log.txt  package.xml
ROS_PROJECT/src/hc_vision/Algos/: .project  BaseAlgorithm.cpp  BaseAlgorithm.h
ROS_PROJECT/src/hc_vision/Algos/FirstTask/: FirstTaskGate.cpp  FirstTaskGate.h
ROS_PROJECT/src/hc_vision/Algos/ThirdTask/: ThirdTaskBlackBox.cpp  ThirdTaskBlackBox.h
ROS_PROJECT/src/hc_vision/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ROS_PROJECT/src/hc_vision/catkin_generated/installspace/: hc_vision.pc  hc_visionConfig.cmake
ROS_PROJECT/src/hc_vision/include/: CreatedFilter.h  Filter.h  FilterHandler.h  FilterRun.h  FilterRunThread.h  FilterThreadPool.h  FrontCamera.h  RosNetwork.h  VideoStream.h
ROS_PROJECT/src/hc_vision/src/: CamerasController.cpp  Filter.cpp  FilterHandler.cpp  FilterRun.cpp  FilterRunThread.cpp  FilterThreadPool.cpp  Log.cpp  RosNetwork.cpp  VideoStream.cpp  main.cpp
(+109 files in other folders)
